Add ByteBuffer support for decoding GIFs.